# DickGrayson

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Gemfile  LICENSE  Makefile  README.md  keys.txt
include/: CMakeLists.txt
include/dgcrypto/: dgcrypto.cc  dgcrypto.hh  dgprime.cc  dgprime.hh  dgrandominteger.cc  dgrandominteger.hh  dgrandomprime.cc  dgrandomprime.hh
include/dgimg/: dgimg.hh
include/stego-crypt-lib/: bmp_manip.h  bmp_manip.hh  stego-crypt-lib.hh
lib/: CMakeLists.txt  README.md  coverage_list.cmake  coveralls_list.cmake
lib/dgcrypto/: dgcrypto.hh  dginteger.cc  dginteger.hh  dgprime.hh  dgrandominteger.cc  dgrandominteger.hh  dgrandomprime.cc  dgrandomprime.hh
lib/dgimg/: bmp.cc  bmp.hh  bmp_data.cc  bmp_data.hh  bmp_manip.hh  dgimg.cc  dgimg.hh
lib/dgsnd/: build_list.cmake  dgsnd.cc  dgsnd.hh  wav.cc  wav.hh
lib/dgtype/: dgtype.cc  dgtype.hh  exception.hh  exception_util.hh  util.hh
lib/rsa-attack-lib/: common_modulus.cc  common_modulus.hh  factorization_attack.cc  factorization_attack.hh  known_totient.cc  low_exponent.cc  low_exponent.hh  rsa-attack-lib.cc  rsa-attack-lib.h  rsa-attack-lib.hh
lib/rsa-crypt-lib/: base64.h  rsa-crypt-lib.cc  rsa-crypt-lib.hh
lib/stego-attack-lib/: e_os2.h  md5.h  md5attack.cc  opensslconf.h  stego-attack-lib.cc  stego-attack-lib.hh
lib/stego-crypt-lib/: abstract_embedding_agent.cc  abstract_embedding_agent.hh  abstract_extracting_agent.cc  abstract_extracting_agent.hh  args.cc  args.hh  bmp_embedding_agent.cc  bmp_embedding_agent.hh  bmp_extracting_agent.cc  bmp_extracting_agent.hh  embedding_agent.cc  embedding_agent.hh  extracting_agent.cc  extracting_agent.hh  file_io.cc  file_io.hh  stego-crypt-lib.hh  stego-crypt-util.cc  stego-crypt-util.hh  wav_embedding_agent.cc  wav_embedding_agent.hh  wav_extracting_agent.cc  wav_extracting_agent.hh
share/: README.md
share/cmake/: Coveralls.cmake  CoverallsGenerateGcov.cmake  FindGMP.cmake  InstallGMP.cmake
share/demo/: commands.txt  comod_demo.txt  factoring_demo.txt  lowexp_demo.txt  rsa-crypt-rafa  stego-crypt-commands  toto-demo
share/design-doc/: design-document.md
share/examples/: bashrc  gitconfig  gitignore  lcovrc
share/man/: stego-attack.1
share/notes/: bmp.org  openssl.org
share/presentation/: presentation.org  presentation.tex
share/project-spec/: project4-spec-notes.org  project4.tex
share/report/: report.org
share/scripts/: better-defaults.sh  install-ccache.sh  install-cmake.sh  install-gmp.sh  install-lcov.sh  install-libsndfile.sh  install-openssl.sh  lcov-prefix.patch
src/: CMakeLists.txt  main.cc
src/dorothy/: CMakeLists.txt
src/munchkincrypt/: CMakeLists.txt
src/munchkinsteg/: CMakeLists.txt
src/rsa-crypt/: main.cc
src/toto/: CMakeLists.txt
test/: CMakeLists.txt  coverage_list.cmake  coveralls_list.cmake
test/dgcrypto/: dgcrypto-test.cc
test/dgimg/: dgimg-test.cc
test/dgsnd/: dgsnd-test.cc
test/dgtype/: dgtype-test.cc
test/gmp/: gmp-test.cc
test/libgnump/: libgnump-test.cc
test/rsa-attack/: rsa-attack-test.cc
test/rsa-crypt/: rsa-crypt-test.cc
test/stego-attack/: stego-attack-test.cc
test/stego-crypt/: extracted-message  message  not_too_long_for_bmp  not_too_long_for_wav  stego-crypt  stego-crypt-test.cc  too_long_for_bmp  too_long_for_wav
